Installed Electron-reload, moved TaskTimer project into here. (index.html, app.js, and styles.css)

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/ZenixR1/Z-Task/issues"
   },
-  "homepage": "https://github.com/ZenixR1/Z-Task#readme"
+  "homepage": "https://github.com/ZenixR1/Z-Task#readme",
+  "dependencies": {
+    "electron-reload": "^2.0.0-alpha.1"
+  }
 }
